# zeus

./: .gitignore  .pre-commit-config.yaml  BILIBILI_COOKIES_GUIDE.md  FFMPEG_INSTALL.md  Makefile  README-CPU.md  README.md  activate.sh  app.py  pyproject.toml  requirements-cpu.txt  requirements.txt  run.sh  setup-cpu.sh  setup.sh
youdub/: cn_tx.py  do_everything.py  step000_video_downloader.py  step010_demucs_vr.py  step020_whisperx.py  step030_translation.py  step040_tts.py  step041_tts_bytedance.py  step042_tts_xtts.py  step043_tts_aliyun.py  step050_synthesize_video.py  step060_genrate_info.py  step070_upload_bilibili.py  utils.py
